# vxnli

./: .gitignore  LICENSE  README.md  pyproject.toml
data/datasets/vxnli-v1/: test.ndjson  train.ndjson  val.ndjson
data/results/user-study/tasks/: 1.json  10.json  11.json  12.json  13.json  14.json  15.json  16.json  2.json  3.json  5.json  6.json  7.json  8.json  9.json
notebooks/: 01_eda.ipynb  02_preprocess.ipynb  02_preprocessing.ipynb  03_model-v0.ipynb  04_pre-user-study.ipynb  05_annotation.ipynb  06_model-v1.ipynb  07_user-study-preparation.ipynb  08_user-study-results.ipynb  09_data-augmentation.ipynb
tests/: test_vega_zero.py
tests/models/v0/: test_model.py
vxnli/: __init__.py  _vega_zero.py  errors.py  plot.py
vxnli/models/v0/: model.py
vxnli/models/v1/: model.py
