[tool.poetry]
name = "vxnli"
version = "0.1.0"
description = "Extended Natural Language Interface for Data Visualization (V-XNLI)"
license = "MIT"
authors = ["kwkty <45205880+kwkty@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
altair = "^4.2.0"
pandas = "^1.5.2"
sentencepiece = { version = "^0.1.97", optional = true }
transformers = { version = "^4.24.0", optional = true }

[tool.poetry.extras]
model-v0 = ["transformers", "sentencepiece"]
model-v1 = ["transformers", "sentencepiece"]

[tool.poetry.group.dev.dependencies]
datasets = "^2.7.1"
evaluate = "^0.3.0"
ipykernel = "^6.17.1"
ipywidgets = "^8.0.2"
papermill = "^2.4.0"
pandas-profiling = "^3.5.0"
mlflow = "^2.0.1"
scikit-learn = "^1.1.3"
sentencepiece = "^0.1.97"
tqdm = "^4.64.1"
tokenizers = "^0.13.2"
torch = "^1.13.0"
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
transformers = "^4.24.0"
pre-commit = "^2.20.0"
black = "^22.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
