[tool.poetry]
name = "vxnli"
version = "0.1.0"
description = "Extended Natural Language Interface for Data Visualization (V-XNLI)"
license = "MIT"
authors = ["kwkty <45205880+kwkty@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
pandas = "^1.3.5"
altair = "^4.2.0"
sentencepiece = { version = "^0.1.97", optional = true }
transformers = { version = "^4.25.1", optional = true }

[tool.poetry.extras]
model-v0 = ["transformers", "sentencepiece"]
model-v1 = ["transformers", "sentencepiece"]

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
datasets = "^2.7.1"
evaluate = "^0.3.0"
ipywidgets = "^8.0.2"
pandas-profiling = "^3.5.0"
papermill = "^2.4.0"
pre-commit = "^2.20.0"
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
scikit-learn = "^1.1.3"
sentencepiece = "^0.1.97"
tokenizers = "^0.13.2"
torch = "^1.13.0"
tqdm = "^4.64.1"
transformers = "^4.25.1"
wandb = "^0.13.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
